Reporte de un dia en Diario
Agrega al Home/Diario un reporte de ese día que se está viendo, con
gráfico y detalle, además de poder ver rápidamente las calorías
consumidas ese día arriba

--- a/nutricloud-webforms/nutricloud-webforms.csproj
+++ b/nutricloud-webforms/nutricloud-webforms.csproj
@@ -515,6 +515,7 @@
     <Compile Include="Models\General.cs" />
     <Compile Include="Models\Mensaje.cs" />
     <Compile Include="Models\Notificacion.cs" />
+    <Compile Include="Models\ReporteCompleto.cs" />
     <Compile Include="Models\Reporte.cs" />
     <Compile Include="Models\UsuarioCompleto.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
