--- a/nutricloud-webforms/Web.config
+++ b/nutricloud-webforms/Web.config
@@ -5,8 +5,8 @@
   -->
 <configuration>
   <configSections>
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings>
     <add key="ChartImageHandler" value="storage=file;timeout=20;" />
@@ -47,10 +47,6 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
-    <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    </providers>
-  </entityFramework>
-<connectionStrings><add name="nutricloudEntities" connectionString="metadata=res://*/DataBase.DataBaseModel.csdl|res://*/DataBase.DataBaseModel.ssdl|res://*/DataBase.DataBaseModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PILAR-PC\SQLEXPRESS;initial catalog=nutricloud;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+  <connectionStrings>
+  <add name="nutricloudEntities" connectionString="metadata=res://*/DataBase.DataBaseModel.csdl|res://*/DataBase.DataBaseModel.ssdl|res://*/DataBase.DataBaseModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WIN-JG3HPLHUK3A\SQLEXPRESS;initial catalog=nutricloud;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+</configuration>
